Get the project working using Maven and SDK 25